--- a/GeorgiKarapetrovResume.tex
+++ b/GeorgiKarapetrovResume.tex
@@ -135,37 +135,41 @@
 \cvsection{SKILLS}
 
 \cvevent{}{Skill Set:}{}{}
+\cvtag{Terraform}
+\cvtag{Git}
+\cvtag{CI/CD}
+\cvtag{AWS}
+\cvtag{Azure}
+\cvtag{Linux}\\
+\cvtag{Bash}
 \cvtag{Python/Jython}
 \cvtag{Java}
-\cvtag{ITIL}
+\cvtag{PS}
 \cvtag{JS}
-\cvtag{VBA}
-\cvtag{Linux}
-\cvtag{Bash}\\
+\cvtag{VBA}\\
 \cvtag{Docker}
 \cvtag{Kubernetes}
 \cvtag{WSDL/XSD/XML}
-\cvtag{SQL}
-\cvtag{Git}\\
+\cvtag{SQL}\\
 \cvtag{NginX}
 \cvtag{Apache}
 \cvtag{LaTeX}
 \cvtag{Mathematica}
 \cvtag{MikroTik}\\
 \cvtag{Cisco}
-\cvtag{Micro Focus Service Manager}
-\cvtag{Micro Focus uCMDB}
+\cvtag{HP Service Manager}
+\cvtag{HP uCMDB}
+\cvtag{ITIL}
 
 \divider
 
 \cvevent{}{Happy to Pick-up:}{}{}
-\cvtag{Terraform}
 \cvtag{Ansible}
 \cvtag{Puppet}
 \cvtag{Chef}
+\cvtag{Packer}
+\cvtag{ProxMox}
 \cvtag{VMWare}
-\cvtag{Zen/Citrix}\\
-\cvtag{Another Language or Framework}
 
 \divider
 
@@ -175,9 +179,11 @@
 \cvtag{Easy-Going}
 \cvtag{Fast Learner}
 
+\vspace{5pt}
+
 \cvsection{ACHIEVEMENTS}
 
-\cvachievement{\faGem}{Ticket Exchange}{Designing and implementing ticket exchange between multiple parties, for a Micro Focus customer.}
+\cvachievement{\faGem}{Ticket Exchange}{Designing, developing and implementing ticket exchange between multiple parties, for a Micro Focus customer.}
 
 \divider
 
