--- a/GeorgiKarapetrovResume.tex
+++ b/GeorgiKarapetrovResume.tex
@@ -135,28 +135,42 @@
 \cvsection{SKILLS}
 
 \cvevent{}{Skill Set:}{}{}
+
+\cvtag{Docker}
+\cvtag{Kubernetes}
+\cvtag{Portainer}
 \cvtag{Terraform}
-\cvtag{Git}
-\cvtag{CI/CD}
 \cvtag{AWS}
 \cvtag{Azure}
-\cvtag{Linux}\\
+
+\cvtag{GIT; CI/CDs \& runners}
+%\cvtag{Azure DevOps}
+%\cvtag{GitLab}
+%\cvtag{Artefactory}
+%\cvtag{FortiNet}
+%\cvtag{Jenkins}
+%\cvtag{SonarQube}
+%\cvtag{Urban Code Deploy}
+\cvtag{Linux}
 \cvtag{Bash}
 \cvtag{Python/Jython}
 \cvtag{Java}
-\cvtag{PS}
+
 \cvtag{JS}
-\cvtag{VBA}\\
-\cvtag{Docker}
-\cvtag{Kubernetes}
+\cvtag{VBA}
 \cvtag{WSDL/XSD/XML}
-\cvtag{SQL}\\
-\cvtag{NginX}
-\cvtag{Apache}
+\cvtag{SQL}
 \cvtag{LaTeX}
 \cvtag{Mathematica}
-\cvtag{MikroTik}\\
+
+\cvtag{NginX}
+\cvtag{Apache}
+\cvtag{MikroTik}
 \cvtag{Cisco}
+\cvtag{Zyxel}
+\cvtag{pfSense}
+
+\cvtag{ESXi}
 \cvtag{HP Service Manager}
 \cvtag{HP uCMDB}
 \cvtag{ITIL}
@@ -164,12 +178,16 @@
 \divider
 
 \cvevent{}{Happy to Pick-up:}{}{}
+\cvtag{GCP}
 \cvtag{Ansible}
-\cvtag{Puppet}
-\cvtag{Chef}
+%\cvtag{Puppet}
+%\cvtag{Chef}
 \cvtag{Packer}
 \cvtag{ProxMox}
-\cvtag{VMWare}
+\cvtag{Graphana}
+\cvtag{Prometheus}
+\cvtag{Zabbix}
+
 
 \divider
 
