--- a/GeorgiKarapetrovResume.tex
+++ b/GeorgiKarapetrovResume.tex
@@ -161,14 +161,13 @@
 \cvtag{WSDL/XSD/XML}
 \cvtag{SQL}
 \cvtag{LaTeX}
-\cvtag{Mathematica}
-
+% \cvtag{Mathematica}
 \cvtag{NginX}
 \cvtag{Apache}
-\cvtag{MikroTik}
-\cvtag{Cisco}
-\cvtag{Zyxel}
-\cvtag{pfSense}
+% \cvtag{MikroTik}
+% \cvtag{Cisco}
+% \cvtag{Zyxel}
+% \cvtag{pfSense}
 
 \cvtag{ESXi}
 \cvtag{HP Service Manager}
@@ -186,7 +185,7 @@
 \cvtag{ProxMox}
 \cvtag{Graphana}
 \cvtag{Prometheus}
-\cvtag{Zabbix}
+% \cvtag{Zabbix}
 
 
 \divider
