--- a/GeorgiKarapetrovResume.tex
+++ b/GeorgiKarapetrovResume.tex
@@ -96,7 +96,7 @@
 
 \personalinfo{%
   % Not all of these are required!
-  \email{karapetrov.georgi@mail.bg}
+  \email{Georgi.D.Karapetrov@gmail.com}
   \github{GeorgiKarapetrov}
   %\phone{+359877207204}
   % \mailaddress{Åddrésş, Street, 00000 Cóuntry}
@@ -104,8 +104,8 @@
   \homepage{georgi.karapetrov.top}
   %\twitter{@twitterhandle}
   \\
-  \email{georgi@karapetrov.top}
-  \hspace{11pt}
+  \email{Georgi@Karapetrov.top}
+  \hspace{29pt}
   \linkedin{GeorgiKarapetrov}
   \homepage{linktr.ee/Georgi.DevOps}
   
