--- a/GeorgiKarapetrovResume.tex
+++ b/GeorgiKarapetrovResume.tex
@@ -134,44 +134,21 @@
 
 \cvsection{SKILLS}
 
-\cvevent{}{Skill Set:}{}{}
+\cvevent{}{Toolbox:}{}{}
 
-\cvtag{Docker}
+\cvtag{GoLang}
+\cvtag{Python}
+%\cvtag{Docker}
 \cvtag{Kubernetes}
-\cvtag{Portainer}
-\cvtag{Terraform}
-\cvtag{AWS}
-\cvtag{Azure}
+\cvtag{Linux/Bash}
+%\cvtag{Portainer}
+%\cvtag{Terraform}
+\cvtag{IaC}
 
-\cvtag{GIT; CI/CDs \& runners}
-%\cvtag{Azure DevOps}
-%\cvtag{GitLab}
-%\cvtag{Artefactory}
-%\cvtag{FortiNet}
-%\cvtag{Jenkins}
-%\cvtag{SonarQube}
-%\cvtag{Urban Code Deploy}
-\cvtag{Linux}
-\cvtag{Bash}
-\cvtag{Python/Jython}
-\cvtag{Java}
-
-\cvtag{JS}
-\cvtag{VBA}
-\cvtag{WSDL/XSD/XML}
+\cvtag{CloudOps}
+\cvtag{GitOps}
+\cvtag{CI/CD}
 \cvtag{SQL}
-\cvtag{LaTeX}
-% \cvtag{Mathematica}
-\cvtag{NginX}
-\cvtag{Apache}
-% \cvtag{MikroTik}
-% \cvtag{Cisco}
-% \cvtag{Zyxel}
-% \cvtag{pfSense}
-
-\cvtag{ESXi}
-\cvtag{HP Service Manager}
-\cvtag{HP uCMDB}
 \cvtag{ITIL}
 
 \divider
@@ -179,13 +156,8 @@
 \cvevent{}{Happy to Pick-up:}{}{}
 \cvtag{GCP}
 \cvtag{Ansible}
-%\cvtag{Puppet}
-%\cvtag{Chef}
 \cvtag{Packer}
 \cvtag{ProxMox}
-\cvtag{Graphana}
-\cvtag{Prometheus}
-% \cvtag{Zabbix}
 
 
 \divider
@@ -200,15 +172,15 @@
 
 \cvsection{ACHIEVEMENTS}
 
-\cvachievement{\faGem}{Ticket Exchange}{Designing, developing and implementing ticket exchange between multiple parties, for a Micro Focus customer.}
+\cvachievement{\faChartLine}{Database Management Service}{Help develop and run VMWare's own Database Management Service to rival other clouds and integrate it for their classical datacenter customers.}
+
+\divider
+
+\cvachievement{\faGem}{Ticket Exchange}{Single-handedly designing, negotiating, developing and implementing ticket exchange between multiple parties, for a Micro Focus customer.}
 
 \divider
 
 \cvachievement{\faLightbulb}{Efficiency Report}{A report for the ETA telecom, analyzing the efficiency of the company workflow and suggesting structural improvements.}
-
-\divider
-
-\cvachievement{\faChartLine}{Customer Service}{Obsessed with customer satisfaction and product quality, achieved highest standards service in my contact center jobs, processing 60+ calls daily.}
 
 \divider
 
@@ -292,25 +264,28 @@
 
 \cvsection{Experience}
 
-\cvevent{DevOps Engineer}{Sciant}{Oct 2021 - Ongoing}{}
+\cvevent{Software Engineer}{VMWare}{Jan 2023 - Ongoing}{}
+\divider
+
+\cvevent{DevOps Engineer}{Sciant}{Oct 2021 - Dec 2022}{}
 \divider
 \cvevent{Technology Consultant II}{Micro Focus}{Oct 2019 - Oct 2021}{}
 
-\divider
+%\divider
 
-\cvevent{Network Administrator}{Eta Zheleva Ltd}{May 2019 - Aug 2019}{}
-\begin{itemize}
-\item The major telecom for Lovech and Pleven
-\end{itemize}
+%\cvevent{Network Administrator}{Eta Zheleva Ltd}{May 2019 - Aug 2019}{}
+%\begin{itemize}
+%\item The major telecom for Lovech and Pleven
+%\end{itemize}
 
-\divider
+%\divider
 
 % \cvevent{Specialist in Processing Information}{Bulpros}{2017}{}
 % \begin{itemize}
 % \item Subcontractor for Concentrix
 % \end{itemize}
 
-\vspace{7pt}
+\vspace{15pt}
 
 \cvsection{Education}
 
@@ -326,7 +301,7 @@ Thesis title: On Sasaki-Einstein and Other Spinor Manifolds
 \cvevent{B.S. in Mathematics}{Sofia University "St. Kliment Ohridski"}{2011 -- 2014}{}
 
 
-
+\vspace{11pt}
 
 \cvsection{Languages}
 
