--- a/GeorgiKarapetrovResume.tex
+++ b/GeorgiKarapetrovResume.tex
@@ -143,8 +143,8 @@
 \cvtag{Linux/Bash}
 %\cvtag{Portainer}
 %\cvtag{Terraform}
-\cvtag{IaC}
 
+\cvtag{IaC}
 \cvtag{CloudOps}
 \cvtag{GitOps}
 \cvtag{CI/CD}
@@ -154,11 +154,14 @@
 \divider
 
 \cvevent{}{Happy to Pick-up:}{}{}
+\cvtag{Machine Learning}
+\cvtag{Quant Science}
 \cvtag{GCP}
+
+\cvtag{Hashicorp stack}
+\cvtag{ProxMox}
 \cvtag{Ansible}
 \cvtag{Packer}
-\cvtag{ProxMox}
-
 
 \divider
 
@@ -168,19 +171,25 @@
 \cvtag{Easy-Going}
 \cvtag{Fast Learner}
 
-\vspace{5pt}
+\vspace{17pt}
 
 \cvsection{ACHIEVEMENTS}
 
-\cvachievement{\faChartLine}{Database Management Service}{Help develop and run VMWare's own Database Management Service to rival other clouds and integrate it for their classical datacenter customers.}
+\cvachievement{\faChartLine}{Database Management}{Drove VMWare's own Database Management Service to
+
+general availability and DataServiceManager's v2 release.}
 
 \divider
 
-\cvachievement{\faGem}{Ticket Exchange}{Single-handedly designing, negotiating, developing and implementing ticket exchange between multiple parties, for a Micro Focus customer.}
+\cvachievement{\faGem}{Ticket Exchange}{Single-handedly designed, negotiated, developed and
+
+implemented a ticket exchange between multiple parties,
+
+for a Micro Focus customer.}
 
 \divider
 
-\cvachievement{\faLightbulb}{Efficiency Report}{A report for the ETA telecom, analyzing the efficiency of the company workflow and suggesting structural improvements.}
+\cvachievement{\faLightbulb}{Efficiency Report}{Wrote  report for the ETA telecom, analyzing the efficiency of the company work-flow, suggesting structural improvements.}
 
 \divider
 
@@ -189,7 +198,7 @@
 \bigskip
 \bigskip
 \smallskip
-\vspace{1pt}
+\vspace{12pt}
 
 \cvsection{Passions}
 
@@ -264,7 +273,7 @@
 
 \cvsection{Experience}
 
-\cvevent{Software Engineer}{VMWare}{Jan 2023 - Ongoing}{}
+\cvevent{Software Engineer}{VMWare}{Jan 2023 - Feb 2024}{}
 \divider
 
 \cvevent{DevOps Engineer}{Sciant}{Oct 2021 - Dec 2022}{}
