add SAP to long form

--- a/GeorgiKarapetrovResume_long.tex
+++ b/GeorgiKarapetrovResume_long.tex
@@ -98,6 +98,17 @@
 
 \cvsection{Experience}
 
+\cvevent{Software Engineer}{SAP Labs}{Jun 2024 - Present}{}
+\begin{itemize}
+\item Focusing on secret management and IAS solutions
+\item Enhance old components
+\item Refactor technical debt
+\item Code review
+\item Developed platform and SRE tools
+\item Set up CI/CD automation workflows
+\end{itemize}
+\divider
+
 \cvevent{Software Engineer}{VMWare}{Jan 2023 - Feb 2024}{}
 \begin{itemize}
 \item Drove the VMWare DBaaS to General Availability
@@ -108,7 +119,6 @@
 \item Built and maintained virtual infrastructure
 \item Set up CI/CD automation workflows
 \item SRE Duties
-\item Customer Support
 \end{itemize}
 \divider
 
@@ -122,8 +132,7 @@
 \item Create and configure cloud-based environments and services
 \item Set up CI/CD automation workflows
 \item Solve critical problems in development or production environments
-\item System, network and application administration support
-\item Customer Support
+\item System, network and application support
 \end{itemize}
 \divider
 
@@ -132,8 +141,15 @@
 \item Administer Micro Focus IT Operation Managment products in accordance with highest ITIL standards
 \item Specialized in Universal Configuration Management Databese integrations
 \item Designed a ticket exchange mechanism and developed the design in IT Service Manager (JavaScript)
-\item Customer Support
 \end{itemize}
+
+% \divider
+
+% \cvevent{Network Administrator}{Eta Zheleva Ltd}{May 2019 - Aug 2019}{}
+% \begin{itemize}
+% \item Configure Cisco switches
+% \item Customer support
+% \end{itemize}
 
 \newpage
 
@@ -204,6 +220,7 @@ for a Micro Focus customer.}
 \cvtag{CI/CD}
 \cvtag{SQL}
 \cvtag{ITIL}
+
 \divider
 
 \cvevent{}{Happy to Pick-up:}{}{}
@@ -216,6 +233,7 @@ for a Micro Focus customer.}
 \cvtag{ProxMox}
 \cvtag{Ansible}
 \cvtag{Packer}
+
 \divider
 
 \cvevent{}{Soft Skills:}{}{}
