--- a/GeorgiKarapetrovResume_long.tex
+++ b/GeorgiKarapetrovResume_long.tex
@@ -100,7 +100,7 @@
 
 \cvevent{Software Engineer}{SAP Labs}{Jun 2024 - Present}{}
 \begin{itemize}
-\item Focusing on secret management and IAS solutions
+\item Focusing on secret management and IAM solutions
 \item Enhance old components
 \item Refactor technical debt
 \item Code review
